Bugfix. Refactoring passes regression tests